--- a/judge.html
+++ b/judge.html
@@ -40,7 +40,7 @@
 
         <div id = "commentResult" style="width:100%" ></div>
         <div id = "resultIMG" ></div>
-        <div id = "winAnimate"></div>
+        <div id = "resultAnimate"></div>
         <p id = "resultText"></p>
         <div id = "restartButton"></div>
     </body>
